# vacuum-ballet

./: .env.example  .gitignore  BUILDING.md  CONTROLS.env.example  README.md  pyproject.toml  requirements.txt
docs/: EXPERIMENTS.md  LEARNING.md  TECH.md
src/: main.py
src/types/: roborock_typing.py
tests/: test_cli.py  test_commands.py  test_connect.py  test_dance.py  test_features.py  test_helpers.py  test_main.py
