[project]
name = "vacuum-ballet"
version = "0.1.0"
description = "Choreograph a Roborock S4 Max from Python: goto + paths + beats"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "python-roborock",
    "python-dotenv",
    "pytest",
]

[project.scripts]
vacuum-ballet = "main:main"

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"
